[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Resources/Font.tres" type="Theme" id=2]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 312.0
margin_bottom = 232.0

[node name="PhoneNumberLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_right = 312.0
margin_bottom = 8.0
theme = ExtResource( 2 )
text = "PHONE NUMBER:"

[node name="CodeLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 312.0
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "CODE:"

[node name="TranscriptLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 312.0
margin_bottom = 32.0
theme = ExtResource( 2 )
text = "TRANSCRIPT:"

[node name="StreamingTranscriptLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 312.0
margin_bottom = 44.0
theme = ExtResource( 2 )
autowrap = true
